# nFactorial

./: .dockerignore  .env.example  .gitignore  .vercelignore  DEPLOY.md  Dockerfile  PUBLISH.ru.md  README.md  VERCEL_SETUP.txt  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  run_pipeline.py  vercel.json
.github/workflows/: ci.yml
app/: config.py  main.py
app/api/: platform_routes.py  routes.py
app/cli/: run_pipeline.py
app/graph/: builder.py  output_profiles.py  pipeline_timeline.py  refusal_messages.py  routing.py  state.py
app/i18n/: __init__.py  evaluator_reasons.py  translate.py
app/prompts/: critic.txt  essay_writer.txt  fact_checker.txt  hooks.txt  narrative.txt  qrt_writer.txt  research.txt  rewrite.txt  thesis.txt  thesis_angles.txt  voice_profiler.txt
app/schemas/: __init__.py  api.py  context.py  criticism.py  narrative.py  platform.py  rewrite.py  thesis.py  trace.py
app/services/: chunk_store.py  content_fetcher.py  document_parser.py  llm.py  local_trace.py  memory.py  research_workflow.py  storage_paths.py  trace_enrichment.py  tracing.py  voice_profiler.py
frontend/: README.md  VERCEL.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  vercel.json
scripts/: run_benchmark.py  verify_deploy.sh
tests/: test_api.py  test_borderline.py  test_context_gate.py  test_epistemic.py  test_evaluators.py  test_i18n.py  test_input_worthiness.py  test_pipeline_mock.py  test_platform_api.py  test_relational_consistency.py  test_routing.py  test_schemas.py  test_tweet_sanitize.py
(+87 files in other folders)
