[project]
name = "adversarial-editorial-engine"
version = "0.1.0"
description = "Adversarial editorial engine for high-insight X/Twitter threads"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "langfuse>=2.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "feedparser>=6.0.0",
    "pypdf>=5.0.0",
    "beautifulsoup4>=4.12.0",
    "aiosqlite>=0.20.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
